# cmsc23700-upstream

./: .gitignore  CMakeLists.txt  README.md
cmake/: cs237-config.cmake
cmake/modules/: FindGLFW.cmake  FindGLM.cmake
config/: cs237-config.h.cmake
cs237-library/: CMakeLists.txt
cs237-library/include/: cs237-application.hpp  cs237-buffer.hpp  cs237-depth-buffer.hpp  cs237-image.hpp  cs237-memory-obj.hpp  cs237-pipeline.hpp  cs237-plane.hpp  cs237-shader.hpp  cs237-texture.hpp  cs237-window.hpp  cs237.hpp  json.hpp  obj.hpp
cs237-library/src/: CMakeLists.txt  application.cpp  depth-buffer.cpp  image.cpp  json-parser.cpp  memory-obj.cpp  obj-reader.hpp  shader.cpp  texture.cpp  window.cpp
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt
labs/lab1/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab1/src/: CMakeLists.txt  main.cpp
labs/lab2/: CMakeLists.txt
labs/lab2/shaders/: CMakeLists.txt  shader.vert
labs/lab2/src/: CMakeLists.txt  main.cpp
labs/lab3/: CMakeLists.txt
labs/lab3/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab3/src/: CMakeLists.txt  main.cpp
labs/lab4/: CMakeLists.txt
labs/lab4/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab4/src/: CMakeLists.txt  main.cpp  mesh-data.cpp  mesh.hpp
labs/lab5/: CMakeLists.txt
labs/lab5/shaders/: CMakeLists.txt  depth.frag  depth.vert  scene.frag  scene.vert
labs/lab5/src/: CMakeLists.txt  crate.cpp  drawable.cpp  drawable.hpp  floor.cpp  main.cpp  mesh.hpp  quad.hpp  uniforms.hpp
projects/: CMakeLists.txt
projects/proj1/: CMakeLists.txt
projects/proj1/shaders/: CMakeLists.txt
projects/proj1/src/: CMakeLists.txt  app.cpp  app.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader-uniforms.hpp  vertex.hpp  window.cpp  window.hpp
projects/proj2/: CMakeLists.txt
projects/proj2/scenes/earth/: scene.json
projects/proj2/scenes/simple1/: scene.json
projects/proj2/shaders/: CMakeLists.txt
projects/proj2/src/: CMakeLists.txt  app.cpp  app.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader-uniforms.hpp  vertex.hpp  window.cpp  window.hpp
projects/proj3/: CMakeLists.txt
projects/proj3/scenes/earth/: scene.json
projects/proj3/scenes/shapes/: scene.json
projects/proj3/shaders/: CMakeLists.txt
projects/proj3/src/: CMakeLists.txt  app.cpp  app.hpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  vertex.hpp  window.cpp  window.hpp
