# CMake configuration labs
#
# CMSC 23700 -- Introduction to Computer Graphics
# Autumn 2023
# University of Chicago
#
# COPYRIGHT (c) 2023 John Reppy
# All rights reserved.
#

add_subdirectory(lab1 EXCLUDE_FROM_ALL)
add_subdirectory(lab2 EXCLUDE_FROM_ALL)
add_subdirectory(lab3 EXCLUDE_FROM_ALL)
add_subdirectory(lab4 EXCLUDE_FROM_ALL)
#add_subdirectory(lab5 EXCLUDE_FROM_ALL)
#add_subdirectory(lab6 EXCLUDE_FROM_ALL)
